fixed footer gap error

--- a/app/components/Footer.module.css
+++ b/app/components/Footer.module.css
@@ -11,7 +11,7 @@
 .contact{
     display: flex;
     margin-bottom: 20px;
-    gap: 20;
+    gap: 20px;
 }
 
 .line{
